--- a/lekcji/lesson8Powtorzenie.html
+++ b/lekcji/lesson8Powtorzenie.html
@@ -148,25 +148,25 @@
                         <p class="p20 italic ">1. <span class="coral">ty</span> | <span class="coral">chcieć</span> | <span class="coral">sok</span> | <span class="coral">czy</span> | <span class="coral">herbata</span> | <span class="coral">cytryna</span>? => <span class="blue">Chcesz sok czy herbatę z zytryną?</span></p>
                     </div>
                     <div class="colors">
-                        <p class="p20 italic ">2. <span class="coral">śnidanie</span> | <span class="coral">ja</span> | <span class="coral">jeść</span> | <span class="coral">jogurt</span> | <span class="coral">płatki śniadaniowe</span>  => <input type="text" data-answer="lubię" class="line_7">.</p>
+                        <p class="p20 italic ">2. <span class="coral">śnidanie</span> | <span class="coral">ja</span> | <span class="coral">jeść</span> | <span class="coral">jogurt</span> | <span class="coral">płatki śniadaniowe</span>  => <input type="text" data-answer="Na śniadanie jem jogurt z płatkami śniadaniowymi" class="line_7">.</p>
                     </div>
                     <div class="colors">
-                        <p class="p20 italic ">3. <span class="coral">co</span> | <span class="coral">ty</span> | <span class="coral">pić</span> | <span class="coral">śniadanie</span>  => <input type="text" data-answer="lubię" class="line_7">.</p>
+                        <p class="p20 italic ">3. <span class="coral">co</span> | <span class="coral">ty</span> | <span class="coral">pić</span> | <span class="coral">śniadanie</span>?  => <input type="text" data-answer="Co pijesz na śniadanie" class="line_7">?</p>
                     </div>
                     <div class="colors">
-                        <p class="p20 italic ">4. <span class="coral">oni</span> | <span class="coral">ja</span> | <span class="coral">jeść</span> | <span class="coral">jogurt</span> | <span class="coral">płatki śniadaniowe</span>  => <input type="text" data-answer="lubię" class="line_7">.</p>
+                        <p class="p20 italic ">4. <span class="coral">oni</span> | <span class="coral">jeść</span> | <span class="coral">zupa pomidorowa</span> | <span class="coral">bez</span> | <span class="coral">makaron</span>  => <input type="text" data-answer="Jedzą zupę pomidorową bez makaronu" class="line_7">.</p>
                     </div>
                     <div class="colors">
-                        <p class="p20 italic ">1. <span class="coral">śnidanie</span> | <span class="coral">ja</span> | <span class="coral">jeść</span> | <span class="coral">jogurt</span> | <span class="coral">płatki śniadaniowe</span>  => <input type="text" data-answer="lubię" class="line_7">.</p>
+                        <p class="p20 italic ">5. <span class="coral">czy</span> | <span class="coral">wy</span> | <span class="coral">jeść</span> | <span class="coral">kurczak</span> | <span class="coral">fritki</span> | <span class="coral">zielona sałata</span>? => <input type="text" data-answer="Czy jecie kurczaka z frytkami i zieloną sałatą" class="line_7">?</p>
                     </div>
                     <div class="colors">
-                        <p class="p20 italic ">1. <span class="coral">śnidanie</span> | <span class="coral">ja</span> | <span class="coral">jeść</span> | <span class="coral">jogurt</span> | <span class="coral">płatki śniadaniowe</span>  => <input type="text" data-answer="lubię" class="line_7">.</p>
+                        <p class="p20 italic ">6. <span class="coral">my</span> | <span class="coral">pić</span> | <span class="coral">kawa</span> | <span class="coral">mleko</span> | <span class="coral">bez</span>  | <span class="coral">cukier</span> => <input type="text" data-answer="Pijemy kawę z mlekiem bez cukru" class="line_7">.</p>
                     </div>
                     <div class="colors">
-                        <p class="p20 italic ">1. <span class="coral">śnidanie</span> | <span class="coral">ja</span> | <span class="coral">jeść</span> | <span class="coral">jogurt</span> | <span class="coral">płatki śniadaniowe</span>  => <input type="text" data-answer="lubię" class="line_7">.</p>
+                        <p class="p20 italic ">7. <span class="coral">co</span> | <span class="coral">wy</span> | <span class="coral">chceć</span> | <span class="coral">deser</span>?  => <input type="text" data-answer="Co chcecie na deser" class="line_7">?</p>
                     </div>
                     <div class="colors">
-                        <p class="p20 italic ">1. <span class="coral">śnidanie</span> | <span class="coral">ja</span> | <span class="coral">jeść</span> | <span class="coral">jogurt</span> | <span class="coral">płatki śniadaniowe</span>  => <input type="text" data-answer="lubię" class="line_7">.</p>
+                        <p class="p20 italic ">8. <span class="coral">ja</span> | <span class="coral">nie</span> | <span class="coral">lubić</span> | <span class="coral">zupa jarzynowa</span> | <span class="coral">ryż</span>  => <input type="text" data-answer="Nie lubię zupy jarzynowej z ryżem" class="line_7">.</p>
                     </div>
                 </div>
             </div>
@@ -175,14 +175,29 @@
                 <div>
                     <button onclick="toggleHints('hints4')">Wskazówka</button>
                     <div id="hints4" style="display: none;">
-                        <p>1. Mama jest szczupła i niska.</p>
-                        <p>2. Tata ma brązowe oczy.</p>
-                        <p>3. Tata z zawodu jest informatykiem.</p>
+                        <p>1. Chcesz sok czy herbatę z cytryną?</p>
+                        <p>2. Na śniadanie jem jogurt z płatkami śniadaniowymi.</p>
+                        <p>3. Co pijesz na śniadanie?</p>
+                        <p>4. Jedzą zupę pomidorową bez makaronu.</p>
+                        <p>5. Czy jecie kurczaka z frytkami i zieloną sałatą?</p>
+                        <p>6. Pijemy kawę z mlekiem bez cukru.</p>
+                        <p>7. Co chcecie na deser?</p>
+                        <p>8. Nie lubię zupy jarzynowej z ryżem.</p>
                     </div>
                 </div>
             </div>
             <!-- end 4 -->
+            <!-- 5 -->
+            <h2>5. Proszę pozwiazać krzyówkę. [508P5]</h2>
+            <div class="video">
+                <iframe style="max-width:100%" src="https://wordwall.net/uk/embed/20abfbf13657403fa27bce05f1112349?themeId=2&templateId=11&fontStackId=0" width="500" height="380" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <!-- end 5 -->
 
+            <!-- 6 -->
+            <div class="image">
+                <img src="https://1drv.ms/i/s!Av5Voug-ar1TgfYTh7LpXG_gULQwlA?embed=1&width=1468&height=1594" alt="508P6-8">
+            </div>
 
 
 
