--- a/index.html
+++ b/index.html
@@ -171,12 +171,38 @@
                      <li class="liLesson"><a href=".//lekcji/lesson8C.html">8-C - Nie cierpię krupniku! <span class="red">  dopetłniacz I.poj. - cd.; bez + dopełniacz</span> <br> 
                         stołówka szkolna; wyrażanie preferencji</a><input type="checkbox" class="checkbox"></li>
                      <hr>
-                     <li class="liLesson"><a href="./lekcji/lesson8D.html">8-D - Czego szukasz?<span class="red">szukać, potrzebować, bać się + dopełniacz</span> <br> opisywanie osób; Czego potrzebujesz ...?</a><input type="checkbox" class="checkbox"></li>
+                     <li class="liLesson"><a href="./lekcji/lesson8D.html">8-D - Czego szukasz?<span class="red"> szukać, potrzebować, bać się + dopełniacz</span> <br> opisywanie osób; Czego potrzebujesz ...?</a><input type="checkbox" class="checkbox"></li>
                      <hr>
                      <li class="liLesson"><a href="./lekcji/lesson8Powtorzenie.html">8 - Powtórzenie </a><input type="checkbox"
                              class="checkbox"></li>
                      <hr>
-                     <li class="liLesson"><a href="./lekcji/lesson7plus.html">8 - Plus - dia ambitnych <span class="red"> narzednik .Imn, - utrwalenie</span> <br> gra miejska</a><input type="checkbox" class="checkbox"></li>
+                     <li class="liLesson"><a href="./lekcji/lesson8plus.html">8 - Plus - dla ambitnych <span class="red"> narzednik .Imn, - utrwalenie</span> <br> gra miejska</a><input type="checkbox" class="checkbox"></li>
+                     <hr>
+                 </ul>
+                 <!-- 9 -->
+                 <h2>9</h2>
+                 <ul class="list">
+                     <li class="liLesson"><a href="./lekcji/lesson9A.html">9-A - Moje miasto<span
+                                 class="red"> - przyimki: za, przed,  między, obok, koło, naprzeciwko, na wprost
+                                </span> <br>opis miasta;
+                                podawanie lokalizacji </a><input type="checkbox"
+                             class="checkbox"></li>
+                     <hr>
+                     <li class="liLesson"><a href="./lekcji/lesson8B.html">9-B - Jak dojść do muzeum?<span
+                        class="red"> - do + dopelniacz; na +biernik
+                    </span> <br>Prepraszam, jak dojść do ...?</a><input type="checkbox"
+                    class="checkbox"></li>
+                     <hr>
+                     <li class="liLesson"><a href=".//lekcji/lesson8C.html">9-C - Chodzic czy isc? <span class="red">  czasowniki: iść, chodzić</span> <br> 
+                        Jak często chodzisz do ...? Czy umiesz jeźdźić na ...?</a><input type="checkbox" class="checkbox"></li>
+                     <hr>
+                     <li class="liLesson"><a href="./lekcji/lesson8D.html">9-D - Droga do szkoły<span class="red"> zaimki osobowe w narzędniku</span> <br> 
+                        opis drogi do szkoły; mail iSMS z instrukcją </a><input type="checkbox" class="checkbox"></li>
+                     <hr>
+                     <li class="liLesson"><a href="./lekcji/lesson8Powtorzenie.html">9 - Powtórzenie </a><input type="checkbox"
+                             class="checkbox"></li>
+                     <hr>
+                     <li class="liLesson"><a href="./lekcji/lesson8plus.html">9 - Plus - dla ambitnych <span class="red">  utrwalenie wiadomości</span> <br> gra miejska</a><input type="checkbox" class="checkbox"></li>
                      <hr>
                  </ul>
             </div>
