--- a/index.html
+++ b/index.html
@@ -193,10 +193,10 @@
                     </span> <br>Prepraszam, jak dojść do ...?</a><input type="checkbox"
                     class="checkbox"></li>
                      <hr>
-                     <li class="liLesson"><a href=".//lekcji/lesson8C.html">9-C - Chodzic czy isc? <span class="red">  czasowniki: iść, chodzić</span> <br> 
+                     <li class="liLesson"><a href=".//lekcji/lesson9C.html">9-C - Chodzić czy iść? <span class="red">  czasowniki: iść, chodzić</span> <br> 
                         Jak często chodzisz do ...? Czy umiesz jeźdźić na ...?</a><input type="checkbox" class="checkbox"></li>
                      <hr>
-                     <li class="liLesson"><a href="./lekcji/lesson8D.html">9-D - Droga do szkoły<span class="red"> zaimki osobowe w narzędniku</span> <br> 
+                     <li class="liLesson"><a href="./lekcji/lesson9D.html">9-D - Droga do szkoły<span class="red"> zaimki osobowe w narzędniku</span> <br> 
                         opis drogi do szkoły; mail iSMS z instrukcją </a><input type="checkbox" class="checkbox"></li>
                      <hr>
                      <li class="liLesson"><a href="./lekcji/lesson8Powtorzenie.html">9 - Powtórzenie </a><input type="checkbox"
