--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
                 <ul class="list">
                     <li class="liLesson"><a href="./lekcji/lesson1.html">2 - A - Co to jest? Kto to jest? <span
                                 class="red">zaimki: kto? co? - Kto to jest? Co to jest?</span></a><input type="checkbox"
-                            class="checkbox"></li>
+                            class="checkbox" checked></li>
                     <hr>
                     <li class="liLesson"><a href="./lekcji/lesson2B.html">2 - B - Ten otówek czy tamten? <span
                                 class="red">podzial na rodzaje rzeczownika; zaimek: ten, ta, to; Kto to jest? Co to
-                                jest?</span></a><input type="checkbox" class="checkbox"></li>
+                                jest?</span></a><input type="checkbox" class="checkbox" checked></li>
                     <hr>
                     <li class="liLesson"><a href=".//lekcji/lesson2C.html">2 - C - Czy to jest czerwone jabłko? Jaki jest
                             twój.<span class="red"> mianownik I.poj.; zaimek: jaki? jaka? jakie?; Czy ot
@@ -199,7 +199,7 @@
                      <li class="liLesson"><a href="./lekcji/lesson9D.html">9-D - Droga do szkoły<span class="red"> zaimki osobowe w narzędniku</span> <br> 
                         opis drogi do szkoły; mail iSMS z instrukcją </a><input type="checkbox" class="checkbox"></li>
                      <hr>
-                     <li class="liLesson"><a href="./lekcji/lesson8Powtorzenie.html">9 - Powtórzenie </a><input type="checkbox"
+                     <li class="liLesson"><a href="./lekcji/lesson9powtórzenie.html">9 - Powtórzenie </a><input type="checkbox"
                              class="checkbox"></li>
                      <hr>
                      <li class="liLesson"><a href="./lekcji/lesson8plus.html">9 - Plus - dla ambitnych <span class="red">  utrwalenie wiadomości</span> <br> gra miejska</a><input type="checkbox" class="checkbox"></li>
