--- a/lekcji/lesson9powtórzenie.html
+++ b/lekcji/lesson9powtórzenie.html
@@ -306,8 +306,67 @@
                             </div>
                         </div>
                     </div>
+
                 </div>
             </div>
+            
+            <!-- 9 -->
+            <div class="two">
+                <div>
+                    <h3 style="margin-top: 10%;">9. Proszę odpowiedzieć na pytania. [509P9]</h3>
+                    <div class="question-set" id="set9" style="margin-left: 5%; ">
+                        <div class="dialog italic ">
+                            <div class="colors">
+                                <p class="p20 italic ">1. Z kim chodzić do szkoły? <br> ona => <span class="blue">Chodzę z nią do szkoły.</span></p>
+                            </div>
+                            <div class="colors">
+                                <p class="p20">2. Z kim idziesz jutro do kina? <br> ty => <input type="text" data-answer="Idę jutro z tobą do kina" class="line_7">.</p>
+                            </div>
+                            <div class="colors">
+                                <p class="p20">3. Z kim codziennie jeździsz na deskorolce? <br> oni => <input type="text" data-answer="Jeżdżę codziennie z nimi na deskorolce" class="line_7">.</p>
+                            </div>
+                            <div class="colors">
+                                <p class="p20">4. Z kim jedziesz na wakacje? <br> wy => <input type="text" data-answer="Jadę z wami na wakacje" class="line_7">.</p>
+                            </div>
+                            <div class="colors">
+                                <p class="p20">5. Z kim chodzisz na basen? <br> on => <input type="text" data-answer="Chodzę z nim na basen" class="line_7">.</p>
+                            </div>
+                            <div class="colors">
+                                <p class="p20">6. Z kim jeździsz na rolkach? <br> one => <input type="text" data-answer="Jeżdżę z nimi na rolkach" class="line_7">.</p>
+                            </div>
+                            <div class="colors">
+                                <p class="p20">7. Z kim ona uczy się polskiego? <br>  ja => <input type="text" data-answer="Ona uczy się ze mną polskiego" class="line_7">.</p>
+                            </div>
+                            <div class="colors">
+                                <p class="p20">8. Z kim one są w grupie? <br> my => <input type="text" data-answer="One są z nami w grupi" class="line_7">.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="flex">
+                        <button onclick="checkAnswers('set9')">Check</button>
+                        <div>
+                            <button onclick="toggleHints('hints9')">Wskazówka</button>
+                            <div id="hints9" style="display: none;">
+                                <p>2. ty => Idę jutro z tobą do kina.</p>
+                                <p>3. oni => Jeżdżę codziennie z nimi na deskorolce.</p>
+                                <p>4. wy => Jadę z wami na wakacje.</p>
+                                <p>5. on => Chodzę z nim na basen.</p>
+                                <p>6. one => Jeżdżę z nimi na rolkach.</p>
+                                <p>7. ja => Ona uczy się ze mną polskiego.</p>
+                                <p>8. my => One są z nami w grupie.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="image">
+                    <img src="https://1drv.ms/i/s!Av5Voug-ar1Tgft4SdZXi2ucxSXp6w?embed=1&width=914&height=1954" alt="10-11">
+                </div>
+
+             </div>
+
+
+
+            <!-- end 9 -->
 
 
 
