--- a/lekcji/lesson9powtórzenie.html
+++ b/lekcji/lesson9powtórzenie.html
@@ -357,6 +357,39 @@
                             </div>
                         </div>
                     </div>
+                    <h3 style="margin-top: 10%;">12. Proszę uzupełnić. [509P12]</h3>
+                    <div class="question-set" id="set12" style="margin-left: 5%; ">
+                        <div class="dialog italic ">
+                            <div class="colors">
+                                <p class="p20 italic ">1. Idę na <span class="blue">pocztę</span>. <img src="https://1drv.ms/i/s!Av5Voug-ar1Tgft5fzM1cl6M1BL7Uw?embed=1&width=280&height=280" alt="poczta" style="width: 15%;"></p>
+                            </div>
+                            <div class="colors">
+                                <p class="p20">2. Mieszkam obok <input type="text" data-answer="szpitala" class="line_2"> <img src="https://1drv.ms/i/s!Av5Voug-ar1Tgft6RbxAWL8JoC9ufA?embed=1&width=280&height=280" alt="szpital" style="width: 10%;">.</p>
+                            </div>
+                            <div class="colors">
+                                <p class="p20">3. Park jest za  <input type="text" data-answer="kinem" class="line_2"> <img src="https://1drv.ms/i/s!Av5Voug-ar1Tgft71PVWcFem9DJnHA?embed=1&width=280&height=280" alt="kino" style="width: 10%;">.</p>
+                            </div>
+                            <div class="colors">
+                                <p class="p20">4. Jestem mięzdy <input type="text" data-answer="muzeum" class="line_2"> <img src="https://1drv.ms/i/s!Av5Voug-ar1Tgft8GzM59-ZGuKkkNw?embed=1&width=280&height=280" alt="muzeum" style="width: 10%;">, a <input type="text" data-answer="apteką" class="line_2"> <img src="https://1drv.ms/i/s!Av5Voug-ar1Tgft9ZmaltKmQD6uBdA?embed=1&width=280&height=280" alt="apteka" style="width: 10%;">.</p>
+                            </div>
+                            <div class="colors">
+                                <p class="p20">5. Czekam przed => <input type="text" data-answer="szkołą" class="line_2"> <img src="https://1drv.ms/i/s!Av5Voug-ar1Tgft-iAlhtIKUBm8v0g?embed=1&width=280&height=280" alt="szkoła" style="width: 10%;">.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="flex">
+                        <button onclick="checkAnswers('set12')">Check</button>
+                        <div>
+                            <button onclick="toggleHints('hints12')">Wskazówka</button>
+                            <div id="hints12" style="display: none;">
+                                <p>1. Idę na <span class="blue">pocztę</span>.</p>
+                                <p>2. Mieszkam obok <b>szpitala</b>. </p>
+                                <p>3. Park jest za <b>kinem</b>.</p>
+                                <p>4. Jestem między <b>muzeum</b> a <b>apteką</b>. </p>
+                                <p>5. Czekam przed <b>szkołą</b>.</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="image">
                     <img src="https://1drv.ms/i/s!Av5Voug-ar1Tgft4SdZXi2ucxSXp6w?embed=1&width=914&height=1954" alt="10-11">
