--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <hr>
                     <li class="liLesson"><a href=".//lekcji/lesson2C.html">2 - C - Czy to jest czerwone jabłko? Jaki jest
                             twój.<span class="red"> mianownik I.poj.; zaimek: jaki? jaka? jakie?; Czy ot
-                                jest..?</span></a><input type="checkbox" class="checkbox"></li>
+                                jest..?</span></a><input type="checkbox" class="checkbox" checked></li>
                     <hr>
                     <li class="liLesson"><a href="./lekcji/lesson2D.html">2 - D - Stare, nowe, kolorowe? <span class="red">
                                 zgodnosé rzeczownika iem - cd.; opis przedmiotów 28 z przymiotnik; Co jest wtwoim
@@ -39,7 +39,7 @@
                     <li class="liLesson"><a href="./lekcji/lesson2powtorzenie.html">2 - Powtórzenie </a><input type="checkbox"
                             class="checkbox"></li>
                     <hr>
-                    <li class="liLesson"><a href="./lessonEnglish/lessonEnglish53.html">2 - Plus - dia ambitnych <span
+                    <li class="liLesson"><a href="./lekcji/lesson2+.html">2 - Plus - dia ambitnych <span
                                 class="red">utrwalenie wiadomosci; opisywanie zanych miejsc w Polsce</span></a><input
                             type="checkbox" class="checkbox"></li>
                     <hr>
@@ -203,6 +203,32 @@
                              class="checkbox"></li>
                      <hr>
                      <li class="liLesson"><a href="./lekcji/lesson9plus.html">9 - Plus - dla ambitnych <span class="red">  utrwalenie wiadomości</span> <br> gra miejska</a><input type="checkbox" class="checkbox"></li>
+                     <hr>
+                 </ul>
+                 <!-- 10 -->
+                 <h2>10</h2>
+                 <ul class="list">
+                     <li class="liLesson"><a href="./lekcji/lesson10A.html">10-A - Czas szybko leci...<span
+                                 class="red"> - liczebniki porzadkowe 1-24
+                                </span> <br>Która godzina?</a><input type="checkbox"
+                             class="checkbox"></li>
+                     <hr>
+                     <li class="liLesson"><a href="./lekcji/lesson9B.html">10-B - D
+                        O której godzinie jest koncert?<span
+                        class="red"> - liczebniki porzadkowe
+                    </span> <br>Októrej godzinie...? Od której do której...?</a><input type="checkbox"
+                    class="checkbox"></li>
+                     <hr>
+                     <li class="liLesson"><a href=".//lekcji/lesson9C.html">10-C - Dzien jak co dzien <span class="red"> -  koniugacje - powtórzenie</span> <br> 
+                        Co robisz codziennie?</a><input type="checkbox" class="checkbox"></li>
+                     <hr>
+                     <li class="liLesson"><a href="./lekcji/lesson9D.html">10-D - Od rana do wieczora<span class="red"> - zebranie catosci materiatu</span> <br> 
+                        Co robisz wweekend?</a><input type="checkbox" class="checkbox"></li>
+                     <hr>
+                     <li class="liLesson"><a href="./lekcji/lesson9powtórzenie.html">10 - Powtórzenie </a><input type="checkbox"
+                             class="checkbox"></li>
+                     <hr>
+                     <li class="liLesson"><a href="./lekcji/lesson9plus.html">10 - Plus - dla ambitnych <span class="red">  godziny - utrwalenie</span> <br> pisanie blogu o pocztówek</a><input type="checkbox" class="checkbox"></li>
                      <hr>
                  </ul>
             </div>
