--- a/lekcji/lesson2C.html
+++ b/lekcji/lesson2C.html
@@ -138,7 +138,7 @@
                                 <p class="p">b. <input type="text" data-answer="Ten zeszyt jest niebieski" class="line">.</p>
                             </div>
                             <div class="colors">
-                                <p class="p">c. <input type="text" data-answer="Ta gumka jest róŻowa" class="line">.</p>
+                                <p class="p">c. <input type="text" data-answer="Ta gumka jest różowa" class="line">.</p>
                             </div>
                             <div class="colors">
                                 <p class="p">d. <input type="text" data-answer="Ten kubek jest pomarańczowy" class="line">.</p>
@@ -147,7 +147,7 @@
                                 <p class="p">e. <input type="text" data-answer="Ten ołówek jest czerwony" class="line">.</p>
                             </div>
                             <div class="colors">
-                                <p class="p">f. <input type="text" data-answer="To krzeslo jest zielone" class="line">.</p>
+                                <p class="p">f. <input type="text" data-answer="To krzesło jest zielone" class="line">.</p>
                             </div>
                         </div>
                         <button onclick="checkAnswers('set2')">Check</button>
