--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                     </span> <br>Októrej godzinie...? Od której do której...?</a><input type="checkbox"
                     class="checkbox"></li>
                      <hr>
-                     <li class="liLesson"><a href=".//lekcji/lesson9C.html">10-C - Dzien jak co dzien <span class="red"> -  koniugacje - powtórzenie</span> <br> 
+                     <li class="liLesson"><a href="./lekcji/lesson10C.html">10-C - Dzien jak co dzien <span class="red"> -  koniugacje - powtórzenie</span> <br> 
                         Co robisz codziennie?</a><input type="checkbox" class="checkbox"></li>
                      <hr>
                      <li class="liLesson"><a href="./lekcji/lesson9D.html">10-D - Od rana do wieczora<span class="red"> - zebranie catosci materiatu</span> <br> 
