--- a/lekcji/lesson2+.html
+++ b/lekcji/lesson2+.html
@@ -120,7 +120,8 @@
                     </div>
                     <button onclick="checkAnswers('set2')">Sprawdź</button>
                 </div>
-                <div class=".text20">
+                <!-- 3 -->
+                <div class=".text20" id="task502E3">
                     <p class="p green"> 3. Prawda (P) czy nieprawda (N)?</p>
                     <div class="task">
                         <p>1. Słońce jest żółte.</p>
@@ -151,7 +152,9 @@
                         </div>
                     </div>
                     <div class="task">
-                        <p><p>5. Chmura jest czarna.</p></p>
+                        <p>
+                        <p>5. Chmura jest czarna.</p>
+                        </p>
                         <div class="options">
                             <label><input type="radio" name="question5" value="1"> P</label>
                             <label><input type="radio" name="question5" value="2"> N</label>
@@ -206,11 +209,11 @@
                             <label><input type="radio" name="question12" value="2"> N</label>
                         </div>
                     </div>
-                    <button onclick="checkRadio()">Проверить</button>
+                    <button onclick="checkRadio('task502E3')">Chek</button>
                 </div>
             </div>
             <!-- 4 -->
-            
+
             <!-- 6 -->
             <h2>6. Proszę połączyć zdania. </h2>
             <div class="video">
@@ -219,174 +222,14 @@
                     frameborder="0" allowfullscreen></iframe>
             </div>
             <!-- 7-8 -->
-            <div class="two">
-                <div>
-                    <h2>7. Co to jest? [502P7]</h2>
-                    <div class="image">
-                        <img src="https://onedrive.live.com/embed?resid=53BD6A3EE8A255FE%2127165&authkey=%21AI7_tmZJzpV4144&width=1056&height=2156"
-                            alt="502P7">
-                    </div>
-                </div>
-                <div>
-                    <h2>8. Proszę posłuchać i zaznaczyć dobrą odpowiedź. [502P8] </h2>
-                    <audio src="./audio/049.mp3" controls></audio>
-                    <div class="task">
-                        <img src="https://onedrive.live.com/embed?resid=53BD6A3EE8A255FE%2127166&authkey=%21AHWYC4qUD4qQ8gw&width=2290&height=486"
-                            alt="Писчие принадлежности">
-                        <div class="options">
-                            <label><input type="radio" name="question1" value="1"> Вариант 1</label>
-                            <label><input type="radio" name="question1" value="2"> Вариант 2</label>
-                            <label><input type="radio" name="question1" value="3"> Вариант 3</label>
-                        </div>
-                    </div>
 
-                    <div class="task">
-                        <img src="https://onedrive.live.com/embed?resid=53BD6A3EE8A255FE%2127167&authkey=%21ACrgoXnxFYZUj3s&width=2290&height=712"
-                            alt="Аквариумы">
-                        <div class="options">
-                            <label><input type="radio" name="question2" value="1"> Вариант 1</label>
-                            <label><input type="radio" name="question2" value="2"> Вариант 2</label>
-                            <label><input type="radio" name="question2" value="3"> Вариант 3</label>
-                        </div>
-                    </div>
-
-                    <div class="task">
-                        <img src="https://onedrive.live.com/embed?resid=53BD6A3EE8A255FE%2127168&authkey=%21ABzCSqrMWNsMFBI&width=2290&height=1042"
-                            alt="Рюкзаки">
-                        <div class="options">
-                            <label><input type="radio" name="question3" value="1"> Вариант 1</label>
-                            <label><input type="radio" name="question3" value="2"> Вариант 2</label>
-                            <label><input type="radio" name="question3" value="3"> Вариант 3</label>
-                        </div>
-                    </div>
-
-                    <div class="task">
-                        <img src="https://onedrive.live.com/embed?resid=53BD6A3EE8A255FE%2127169&authkey=%21AOjEi-mdff-wHvU&width=2290&height=728"
-                            alt="Камеры">
-                        <div class="options">
-                            <label><input type="radio" name="question4" value="1"> Вариант 1</label>
-                            <label><input type="radio" name="question4" value="2"> Вариант 2</label>
-                            <label><input type="radio" name="question4" value="3"> Вариант 3</label>
-                        </div>
-                    </div>
-
-                    <button onclick="checkRadio()">Проверить</button>
-                </div>
-            </div>
-            <div class="infoText">
-                <p>В польском языке слова "aparat" и "kamera" имеют разные значения и используются в разных контекстах.
-                </p>
-                <p class="p">1. Aparat:</p>
-                <ul>
-                    <li>Обычно используется для обозначения фотоаппарата.</li>
-                    <li>Может также относиться к различным видам приборов или устройств, например, "aparat słuchowy"
-                        (слуховой аппарат), "aparat telefoniczny" (телефонный аппарат).</li>
-                    <li>Пример: "Kupiłem nowy aparat fotograficzny." (Я купил новый фотоаппарат.)</li>
-                </ul>
-                <p class="p">2. Kamera:</p>
-                <ul>
-                    <li>Используется для обозначения видеокамеры.</li>
-                    <li>Может также использоваться в контексте камер наблюдения или веб-камер.</li>
-                    <li>Пример: "Używam kamery do nagrywania filmów." (Я использую видеокамеру для записи видео.)</li>
-                </ul>
-
-            </div>
-
-            <!-- SCRIPT -->
-
-            <script>
-
-                // 6
-                function checkAnswers(setId) {
-                    const set = document.getElementById(setId);
-                    const inputs = set.querySelectorAll('input[data-answer]');
-                    inputs.forEach(input => {
-                        const correctAnswer = input.getAttribute('data-answer').toLowerCase();
-                        const userAnswer = input.value.trim().toLowerCase();
-
-                        if (userAnswer === correctAnswer) {
-                            input.classList.add('correct');
-                            input.classList.remove('incorrect');
-                        } else {
-                            input.classList.add('incorrect');
-                            input.classList.remove('correct');
-                        }
-                    });
-                }
-
-                // выбор
-                document.addEventListener('DOMContentLoaded', (event) => {
-                    const questions = document.querySelectorAll('.question');
-
-                    questions.forEach(question => {
-                        const options = question.querySelectorAll('.option');
-                        options.forEach(option => {
-                            option.addEventListener('click', () => {
-                                options.forEach(opt => opt.classList.remove('selected'));
-                                option.classList.add('selected');
-                            });
-                        });
-                    });
-
-                    document.getElementById('checkAnswers').addEventListener('click', () => {
-                        questions.forEach(question => {
-                            const correctIndex = question.getAttribute('data-correct');
-                            const selectedOption = question.querySelector('.option.selected');
-                            if (selectedOption && selectedOption.getAttribute('data-index') == correctIndex) {
-                                question.classList.add('correct');
-                                question.classList.remove('incorrect');
-                            } else {
-                                question.classList.add('incorrect');
-                                question.classList.remove('correct');
-                            }
-                        });
-                    });
-                });
-                // radio label
-                function checkRadio() {
-                    const correctAnswers = {
-                        question1: '1',
-                        question2: '2',
-                        question3: '2',
-                        question4: '1',
-                        question5: '2',
-                        question6: '2',
-                        question7: '1',
-                        question8: '1',
-                        question9: '2',
-                        question10: '1',
-                        question11: '1',
-                        question12: '2'
-                    };
-
-                    let allCorrect = true;
-
-                    for (const question in correctAnswers) {
-                        const selectedAnswer = document.querySelector(`input[name="${question}"]:checked`);
-                        const taskElement = document.querySelector(`input[name="${question}"]`).closest('.task');
-
-                        if (selectedAnswer && selectedAnswer.value === correctAnswers[question]) {
-                            taskElement.classList.add('correct');
-                            taskElement.classList.remove('incorrect');
-                        } else {
-                            taskElement.classList.add('incorrect');
-                            taskElement.classList.remove('correct');
-                            allCorrect = false;
-                        }
-                    }
-
-                    if (allCorrect) {
-                        alert("Все ответы верны!");
-                    } else {
-                        alert("Есть ошибки в ответах.");
-                    }
-
-                }
-
-            </script>
 
         </main>
     </div>
+    <script src="../script.js"></script>
+    <script src="../checkRadio.js"></script>
+    <script src="../scriptchexBox.js"></script>
+    <script src="../wyborOtweta.js"></script>
 </body>
 
 </html>
